<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTXT"
        style="@style/title_purple"
        android:textSize="48sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc" />

    <EditText
        android:id="@+id/pesoEDT"
        android:layout_width="match_parent"
        android:hint="@string/peso_kg"
        android:layout_height="wrap_content"
        style="@style/input_style" />

    <EditText
        android:id="@+id/alturaEDT"
        android:layout_width="match_parent"
        android:hint="@string/altura_metros"
        android:layout_height="wrap_content"
        style="@style/input_style" />

    <Button
        android:id="@+id/calculadoraBTN"
        android:backgroundTint="@color/ic_launcher_background"
        android:text="@string/calcular"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginTop="46dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop" />

</LinearLayout>