<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        style="@style/title_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        style="@style/title_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <RadioButton
        style="@style/title_purple"
        android:textSize="24sp"
        android:layout_gravity="start"
        android:layout_margin="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ol_radiobutton"/>

    <CheckBox
        style="@style/title_purple"
        android:scrollbarSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="50sp"
        android:text="@string/ol_checkbox"
        android:textSize="22sp" />

</LinearLayout>