<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        style="@style/title_purple"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        style="@style/title_purple"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <RadioButton
        style="@style/title_purple"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:layout_gravity="start"
        android:layout_margin="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ol_radiobutton"/>

    <CheckBox
        style="@style/title_purple"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="50sp"
        android:text="@string/ol_checkbox" />

</LinearLayout>